--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ByFhFCYI7vyTDzwQEdccMQq+k1uxseJbEw0hb3IwDKs=
 APP_DEBUG=true
-APP_URL=http://testing.test
+APP_URL=http://authenticate.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -10,8 +10,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3307
-DB_DATABASE=blog
+DB_PORT=3306
+DB_DATABASE=authenticate
 DB_USERNAME=root
 DB_PASSWORD=
 
